--- a/src/web.public/public/stylesheets/partials/_typography.scss
+++ b/src/web.public/public/stylesheets/partials/_typography.scss
@@ -20,6 +20,11 @@ p {
    @include body-text;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
 p.tight-lines {
   line-height: 1.3em; //21px?
 }
