--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -14,7 +14,7 @@ $disabled-text-colour: #bbb;
 $normal-border-radius: 6px;
 //$body-font-family: 300 "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 //$body-font-family: 400 14px/1.6 'Open Sans', Verdana, Helvetica, sans-serif;
-$body-font-family: 400 16px/1.6 'Noto Sans', serif;
+$body-font-family: 400 16px/1.6 'Noto Sans', sans-serif;
 $header-font-family: 400 60px/1.3 'Bree Serif', Georgia, serif;
 $menu-arrow-size: 7px;
 $website-max-width: 1200px;
