'Home page improvements

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -2,6 +2,7 @@
 $main-spot-colour: darken(#ad832c, 4); //#ad832c;// #c5aa67;
 $alt-spot-colour: #6d96d5;
 $dark-background-colour: #414142;// #626265;
+$body-background-colour: white;
 $light-background-colour: #c3d5d4;
 $icon-colour: darken($dark-background-colour, 5);
 $control-border-colour: darken($dark-background-colour, 10);
