--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -2,81 +2,64 @@
 
 $platform-big-button-padding: 6px;
 $platform-big-button-margin: 10px;
-$platform-big-button-small-screen-size: 40px;
-$platform-big-button-large-screen-size: 50px;
-$platform-big-button-border-width: 3px;
+$platform-big-button-small-screen-size: 50px;
+$platform-big-button-large-screen-size: 60px;
+$platform-big-button-border-width: 3.2px; // Bizarre hack for firefox.
 $platform-big-button-border-radius: $normal-border-radius;
 $platform-big-button-border-colour: lighten($main-spot-colour, 5);
 
-#home-page .platform-input {
-  display: table;
-  width: ($platform-big-button-small-screen-size + ($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2)) * 3 + ($platform-big-button-margin * 4);
+#home-page .platform-static {
+  @include clearfix;
+  width: (($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2)) * 3 + $platform-big-button-small-screen-size * 3 + ($platform-big-button-margin * 2);
   @include centred-margins;
-  margin-bottom: 16px;
+  margin-bottom: 18px;
 
   @include mq($from: tablet) {
-    width: (($platform-big-button-large-screen-size + ($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2)) * 3) + ($platform-big-button-margin * 4);
+    width: (($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2)) * 3 + $platform-big-button-large-screen-size * 3 + ($platform-big-button-margin * 2);
   }
 
-  label {
-    display: table-cell;
-    padding: 0px $platform-big-button-margin;
-    width: $platform-big-button-small-screen-size + ($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2);
-    height: $platform-big-button-small-screen-size + ($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2);
-
-    @include mq($from: tablet) {
-      width: $platform-big-button-large-screen-size + ($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2);
-      height: $platform-big-button-large-screen-size + ($platform-big-button-border-width * 2) + ($platform-big-button-padding * 2);
-    }
-  }
-
-  input[type="radio"] {
-    display: none;
-  }
-
-  input {
-    margin: 0;
-    padding: 0;
-  }
-
-  img {
-    width: $platform-big-button-small-screen-size;
-    height: $platform-big-button-small-screen-size;
-
-    @include mq($from: tablet) {
-      width: $platform-big-button-large-screen-size;
-      height: $platform-big-button-large-screen-size;
-    }
-  }
-
-  img.last {
-    margin-right: 0px;
-  }
-
-  div {
-    display: block;
+  .platform-img-wrapper  {
+    float: left;
     position: relative;
     padding: $platform-big-button-padding;
-    width: $platform-big-button-small-screen-size + ($platform-big-button-padding * 2) + ($platform-big-button-border-width * 2);
-    height: $platform-big-button-small-screen-size + ($platform-big-button-padding * 2) + ($platform-big-button-border-width * 2);
-
+    margin-right: $platform-big-button-margin;
     border: $platform-big-button-border-width solid transparent;
     @include border-top-radius($platform-big-button-border-radius);
     @include border-bottom-radius($platform-big-button-border-radius);
 
-    @include mq($from: tablet) {
-      width: $platform-big-button-large-screen-size + ($platform-big-button-padding * 2) + ($platform-big-button-border-width * 2);
-      height: $platform-big-button-large-screen-size + ($platform-big-button-padding * 2) + ($platform-big-button-border-width * 2);
+    .platform-img {
+      display: block;
+      width: $platform-big-button-small-screen-size;
+      height: $platform-big-button-small-screen-size;
+
+      @include mq($from: tablet) {
+        width: $platform-big-button-large-screen-size;
+        height: $platform-big-button-large-screen-size;
+      }
+    }
+
+    .soon-overlay {
+      position: absolute;
+      left: 0px + $platform-big-button-padding;
+      right: 0px;
+      top: 0px + $platform-big-button-padding;
+      bottom: 0px;
+      width: $platform-big-button-small-screen-size;
+      height: $platform-big-button-small-screen-size;
+
+      @include mq($from: tablet) {
+        width: $platform-big-button-large-screen-size;
+        height: $platform-big-button-large-screen-size;
+      }
     }
   }
 
-  input[type="radio"]:checked + div {
+  .platform-img-wrapper.ios {
     border: $platform-big-button-border-width solid $platform-big-button-border-colour;
   }
 
-  // Create an arrow below the button. TODO: replace by an arrow image.
-  input[type="radio"]:checked + div:after,
-  input[type="radio"]:checked + div:before {
+  .platform-img-wrapper.ios:after,
+  .platform-img-wrapper.ios:before {
     top: 100%;
     left: 50%;
     border: solid transparent;
@@ -86,17 +69,21 @@ $platform-big-button-border-colour: lighten($main-spot-colour, 5);
     position: absolute;
     pointer-events: none;
   }
-  input[type="radio"]:checked + div:after {
-    border-color: rgba(255, 255, 255, 0);
-    border-top-color: #ffffff;
+  .platform-img-wrapper.ios:after {
+    border-color: transparent;
+    border-top-color: $body-background-colour;
     border-width: 10px;
     margin-left: -10px;
   }
-  input[type="radio"]:checked + div:before {
-    border-color: rgba(90, 245, 12, 0);
+  .platform-img-wrapper.ios:before {
+    border-color: transparent;
     border-top-color: $platform-big-button-border-colour;
     border-width: 14px;
     margin-left: -14px;
+  }
+
+  .platform-img-wrapper.last {
+    margin-right: 0px;
   }
 }
 
