basic about page

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -38,6 +38,9 @@ $half-star-icon: ";";
 $full-star-icon: ":";
 $facebook-icon: "[";
 $twitter-icon: "]";
+$e-mail-icon: "^";
+$address-icon: "~";
+$telephone-icon: "|";
 
 // Not currently in use
 //@import "modules/retina";
