--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -659,10 +659,12 @@ li.category-search-result:before {
     font-weight: bold;
     @include page-title-text;
     @include down-arrow(50px, $main-spot-colour, 16px);
+    max-width: 375px;
+    @include centred-margins;
 
     @include mq($from: mobile-landscape) {
-      text-align: center;
-      max-width: 550px;
+      margin-left: 0px;
+      margin-right: 0px;
     }
   }
 
@@ -698,20 +700,18 @@ li.category-search-result:before {
     }
   }
 
-  p.trademark {
-    @include small-body-text;
-    text-align: left;
-    margin-left: 0px;
-    margin-right: 0px;
+  .about-sections-wrapper {
+    @include clearfix;
   }
 
   .contact-details {
     @include clearfix;
-    border-top: 1px solid $light-drawing-colour;
-    border-bottom: 1px solid $light-drawing-colour;
-    padding: 12px 0px 12px 18px;
-    margin-bottom: 15px;
-    max-width: 550px;
+    //border-top: 1px solid $light-drawing-colour;
+    //border-bottom: 1px solid $light-drawing-colour;
+    //padding: 12px 0px 12px 18px;
+    //margin-bottom: 15px;
+    //max-width: 550px;
+    padding: 0px 12px;
 
     a {
       color: $main-spot-colour;
@@ -746,7 +746,11 @@ li.category-search-result:before {
 
     ul.social-media-links {
       float: left;
-      margin-bottom: 12px;
+      margin-bottom: 28px;
+
+      @include mq($from: mobile-landscape) {
+        margin-bottom: 0px;
+      }
 
       li {
         margin-right: 9px;
