--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -1,7 +1,7 @@
 
-$main-spot-colour: darken(#ad832c, 4); //#ad832c;// #c5aa67;
+$main-spot-colour: darken(#ad832c, 4);
 $alt-spot-colour: #6d96d5;
-$dark-background-colour: #414142;// #626265;
+$dark-background-colour: #414142;
 $body-background-colour: white;
 $light-background-colour: #c3d5d4;
 $icon-colour: darken($dark-background-colour, 5);
@@ -39,6 +39,7 @@ $twitter-icon: "]";
 $e-mail-icon: "^";
 $address-icon: "~";
 $telephone-icon: "|";
+$fancy-right-icon: "_";
 
 // Not currently in use
 //@import "modules/retina";
