--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -88,7 +88,7 @@ h1 {
 
 #search-results h1,
 #search-results p.hint,
-#app h1 {
+#category h1 {
   max-width: 550px;
 }
 
@@ -179,7 +179,7 @@ h1 {
 
   h4 {
     position: relative;
-    margin-bottom: 3px;
+    margin-bottom: 6px;
     font-weight: bold;
     font-size: 20px;
     line-height: 24px;
@@ -351,6 +351,10 @@ h1 {
 }
 
 #app {
+
+  h1 {
+    margin-bottom: 12px;
+  }
 
   .no-error-wrapper {
     position: relative;
@@ -635,7 +639,7 @@ h1 {
     margin: 0px 0px 12px 0px;
     padding: 6px;
     border-bottom: 1px solid lighten($main-spot-colour, 0);
-    padding-bottom: 3px;
+    padding-bottom: 0px;
     text-align: left;
     padding-left: 0px;
   }
