--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -316,11 +316,19 @@ h1 {
 
   img {
     float: left;
+    width: 57px;
+    height: 57px;
     margin-top: 2px;
     margin-right: 6px;
     @include border-top-radius(12px);
     @include border-bottom-radius(12px);
     @include app-icon-shadow;
+
+    @include mq($from: mobile-landscape) {
+      width: 80px;
+      height: 80px;
+      margin-right: 9px;
+    }
   }
 }
 
@@ -372,7 +380,6 @@ h1 {
 }
 
 #app {
-
   h1 {
     margin-bottom: 12px;
   }
@@ -516,14 +523,12 @@ h1 {
     }
 
     .rating {
-      margin-bottom: 20px;
+      .akin-score {
+        height: 16px;
 
-      @include mq($from: tablet) {
-        margin-bottom: 28px;
-      }
-
-      p {
-        color: $alt-black-colour;
+        @include mq($from: tablet) {
+          height: 22px;
+        }
       }
     }
 
@@ -535,7 +540,7 @@ h1 {
       font-size: 20px;
       line-height: 34px;
       font-weight: bold;
-      margin-bottom: 2px;
+      margin-bottom: 4px;
       text-align: center;
       height: 34px;
 
@@ -558,7 +563,7 @@ h1 {
     .download-button {
       width: 126px;
       margin: 0px;
-      margin-top: 12px;
+      margin-top: 6px;
       display: none;
 
       @include mq($from: mobile-landscape) {
@@ -567,6 +572,7 @@ h1 {
 
       @include mq($from: tablet) {
         width: 175px;
+        margin-top: 12px;
       }
 
       img {
