Temporary fix for screenshot positioning on wide screens

--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -701,11 +701,15 @@ h1 {
     }
   }
 
+  .screen-shots-positioning-wrapper {
+    position: relative;
+  }
+
   .screen-shots {
     @include mq($from: desktop) {
       position: absolute;
-      right: 0px;
-      top: 72px;
+      right: -264px;
+      top: 0px;
     }
 
     h2 {
