--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -227,7 +227,7 @@ h1 {
     @include clearfix;
 
     $small-category-result-icon-dim: 37px;
-    $large-category-result-icon-dim: 60px;
+    $large-category-result-icon-dim: 57px;
 
     li {
       float: left;
@@ -316,8 +316,8 @@ h1 {
 
   img {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 57px;
+    height: 57px;
     margin-top: 2px;
     margin-right: 6px;
     @include border-top-radius(12px);
@@ -333,13 +333,13 @@ h1 {
 }
 
 #category .app-search-result img {
-  @include mq($from: mobile-landscape) {
-    width: 80px;
-    height: 80px;
-    margin-right: 9px;
-    @include border-top-radius(15px);
-    @include border-bottom-radius(15px);
-  }
+//  @include mq($from: mobile-landscape) {
+//    width: 80px;
+//    height: 80px;
+//    margin-right: 9px;
+//    @include border-top-radius(15px);
+//    @include border-bottom-radius(15px);
+//  }
 }
 
 .rule {
