--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -187,7 +187,7 @@ main .main-wrapper {
 
     @include mq($from: mobile-landscape) {
       padding: 0px !important;
-      margin-top: 30px;
+      //margin-top: 30px;
       margin-bottom: 30px;
       width: 440px;
       max-width: 440px;
