--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -49,12 +49,12 @@ p.hint {
 
 h1 {
   position: relative;
-  //@include page-title-text;
-  @include large-page-title-text;
+  @include page-title-text;
+  //@include large-page-title-text;
   font-weight: bold;
   display: block;
   //border: 0px;
-  //border-bottom: 2px solid $main-spot-colour;
+  border-bottom: 2px solid $main-spot-colour;
   background-color: transparent;
   padding: 6px 6px 6px 0px;
   margin-bottom: 24px;
